--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
+    "apollo-server-express": "^3.4.0",
     "axios": "^0.23.0",
     "got": "^11.8.2",
+    "graphql": "^15.7.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
