--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^1.0.1",
+    "@nestjs/serve-static": "^2.2.2",
     "apollo-server-express": "^3.4.0",
     "axios": "^0.23.0",
     "got": "^11.8.2",
